# weather

./: README.md  pyproject.toml
src/weather/: server.py
